# file-disk-cache

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
file_disk_cache/: __init__.py  cache.py  file_disk.py
file_disk_cache/config/: logging.py
file_disk_cache/tests/file_disk_cache/: test_cache.py  test_file_disk.py
