[tool.poetry]
name = "file_disk_cache"
version = "0.1.0"
description = "An extension of the diskcache package"
authors = ["Someone <someone@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diskcache = "^5.4.0"
pandas = "^1.0.0"
pyarrow = "^11.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies] 
pytest = "^7.1"
black = "^22.3"
jupyterlab = "^3.4.2"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
